--- a/A Survey on Personalized Content Synthesis with Diffusion Models/2405.05538v1.md
+++ b/A Survey on Personalized Content Synthesis with Diffusion Models/2405.05538v1.md
@@ -347,8 +347,8 @@ CLIP similarity score of text features and image features
 
 ##### Specific metrics for human personalization：
 1. soft-penalized CLIP
-2. text score,
-3. Identity Preservation Score,
+2. text score
+3. Identity Preservation Score
 4. Attribute Preservation Score
 5. Stability of Identity Score
 6. Grounding Objects Accuracy
