--- a/A Survey on Personalized Content Synthesis with Diffusion Models/2405.05538v1.md
+++ b/A Survey on Personalized Content Synthesis with Diffusion Models/2405.05538v1.md
@@ -272,7 +272,7 @@ e.g.  Query-Key-Value (QKV) scheme
 ##### 限制SoI token对注意力层的影响：
 1. Layout-Control：特意调整靠近layout的注意力的权重(无额外训练)。
 2. Cones 2：定义一些负注意力区域来惩罚非法占领。
-3. VICO：插入一个新的注意层，其中部署了一个二进制掩码
+3. VICO：插入一个新的注意层，其中部署了一个二进制掩码。
 4. DreamTuner：设计一个可从图像中不同区域高效整合特征的注意力层。
 
 #### B. Mask-guided Generation
